--- a/WellenceChallenge/pyproject.toml
+++ b/WellenceChallenge/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 django-slick-reporting = "^1.3.1"
 django-crispy-forms = "^2.3"
 crispy-bootstrap4 = "^2024.1"
+django-ninja = "^1.3.0"
 
 
 [build-system]
