--- a/WellenceChallenge/pyproject.toml
+++ b/WellenceChallenge/pyproject.toml
@@ -11,7 +11,16 @@ django-slick-reporting = "^1.3.1"
 django-crispy-forms = "^2.3"
 crispy-bootstrap4 = "^2024.1"
 django-ninja = "^1.3.0"
+email-validator = "^2.2.0"
+sphinx = "^8.0.2"
+sphinxcontrib-openapi = "^0.8.4"
 
+
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^3.8.0"
+ruff = "^0.6.8"
+sphinx = "^8.0.2"
+sphinx-autoapi = "^3.3.2"
 
 [build-system]
 requires = ["poetry-core"]
