--- a/WellenceChallenge/pyproject.toml
+++ b/WellenceChallenge/pyproject.toml
@@ -14,6 +14,7 @@ django-ninja = "^1.3.0"
 email-validator = "^2.2.0"
 sphinx = "^8.0.2"
 sphinxcontrib-openapi = "^0.8.4"
+psycopg2-binary = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
