--- a/WellenceChallenge/docker-compose.yml
+++ b/WellenceChallenge/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
-      - DB_HOST=db
+      - DB_HOST=rick.postgres.database.azure.com
       - DB_PORT=5432
     depends_on:
       - db
