--- a/WellenceChallenge/.github/workflows/deploy.yml
+++ b/WellenceChallenge/.github/workflows/deploy.yml
@@ -3,10 +3,10 @@ name: Build and Deploy to Azure Container Apps
 on:
   push:
     branches: 
-    - Azure
+    - main
   pull_request:
     branches:
-    - Azure
+    - main
 
 jobs:
   build-and-deploy:
