--- a/WellenceChallenge/.github/workflows/deploy.yml
+++ b/WellenceChallenge/.github/workflows/deploy.yml
@@ -13,15 +13,15 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     
     - name: Login to Azure
-      uses: azure/login@v1
+      uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
     - name: Login to Azure Container Registry
-      uses: azure/docker-login@v1
+      uses: azure/docker-login@v2
       with:
         login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
         username: internship
@@ -29,6 +29,7 @@ jobs:
     
     - name: Build and push image to ACR
       run: |
+        cd WellenceChallenge
         docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/rick:${{ github.sha }}
         docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/rick:${{ github.sha }}
     
